# kde-cdemu-manager

./: CHANGELOG  CMakeLists.txt  README.md
po/: CMakeLists.txt  de.po  fr.po  it.po  kde_cdemu.pot  messages.sh  uk.po  zh_TW.po
po/de/: kde_cdemu.po
po/fr/: kde_cdemu.po
po/it/: kde_cdemu.po
po/uk/: kde_cdemu.po
po/unmaintained/: README  pl.po  ro.po  ru.po  sv.po  zh_CN.po
po/zh_TW/: kde_cdemu.po
src/: CMakeLists.txt  cdemu.cpp  cdemu.h  devicelistitem.cpp  devicelistitem.h  exception.cpp  exception.h  kde_cdemu_mount.desktop  kdecdemuversion.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagebox.cpp  messagebox.h  org.kde.kde_cdemu.desktop
